--- a/jenkins/edgecloud_crmazurecloud1_start.yaml
+++ b/jenkins/edgecloud_crmazurecloud1_start.yaml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: crmtmocloud2
+  name: crmazurecloud1
   labels:
-    app: crmtmocloud2
+    app: crmazurecloud1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: crmtmocloud2
+      app: crmazurecloud1
   template:
     metadata:
       labels:
-        app: crmtmocloud2
+        app: crmazurecloud1
     spec:
       containers:
-      - name: crmtmocloud2
+      - name: crmazurecloud1
         image: registry.mobiledgex.net:5000/mobiledgex/edge-cloud:$AUTOMATION_DOCKERTAG
         imagePullPolicy: Always
         command:
          - crmserver
         args:
          - "--apiAddr"
-         - "0.0.0.0:50092"
+         - "0.0.0.0:50062"
          - "--cloudletKey"
-         - "{\"operator_key\":{\"name\":\"tmus\"},\"name\":\"tmocloud-2\"}"
+         - "{\"operator_key\":{\"name\":\"azure\"},\"name\":\"azurecloud-1\"}"
          - "--notifyAddrs"
          - "controller:37001"
          - "--tls"
