add resource cpu=10m to k8s yaml files  Changes to be committed: 	modified:   edgecloud_controller_start.yaml 	modified:   edgecloud_crmazurecentral_start.yaml 	modified:   edgecloud_crmazurecloud1_start.yaml 	modified:   edgecloud_crmbonn_start.yaml 	modified:   edgecloud_crmgcpcloud1_start.yaml 	modified:   edgecloud_crmtmustmocloud1_start.yaml 	modified:   edgecloud_crmtmustmocloud2_start.yaml 	modified:   edgecloud_dmebonn_start.yaml

--- a/jenkins/edgecloud_crmbonn_start.yaml
+++ b/jenkins/edgecloud_crmbonn_start.yaml
@@ -22,6 +22,9 @@ spec:
       - name: crmbonn
         image: registry.mobiledgex.net:5000/mobiledgex/edge-cloud:$AUTOMATION_DOCKERTAG
         imagePullPolicy: Always
+        resources:
+          requests:
+            cpu: 10m
         command:
          - crmserver
         env:
