--- a/jenkins/edgecloud_controller_start.yaml
+++ b/jenkins/edgecloud_controller_start.yaml
@@ -18,6 +18,9 @@ spec:
        - name: controller
          image: registry.mobiledgex.net:5000/mobiledgex/edge-cloud:$AUTOMATION_DOCKERTAG
          imagePullPolicy: Always
+         resources:
+           requests:
+             cpu: 10m
          command:
           - controller
          args:
