--- a/jenkins/edgecloud_dmebonn_start.yaml
+++ b/jenkins/edgecloud_dmebonn_start.yaml
@@ -18,6 +18,9 @@ spec:
       - name: dme
         image: registry.mobiledgex.net:5000/mobiledgex/edge-cloud:$AUTOMATION_DOCKERTAG
         imagePullPolicy: Always
+        resources:
+          requests:
+            cpu: 10m
         command:
          - "dme-server"
          - "--apiAddr"
