add resource cpu=10m to k8s yaml files  Changes to be committed: 	modified:   edgecloud_controller_start.yaml 	modified:   edgecloud_crmazurecentral_start.yaml 	modified:   edgecloud_crmazurecloud1_start.yaml 	modified:   edgecloud_crmbuckhorn_start.yaml 	modified:   edgecloud_crmgcpcloud1_start.yaml 	modified:   edgecloud_crmdmuustmocloud1_start.yaml 	modified:   edgecloud_crmdmuustmocloud2_start.yaml 	modified:   edgecloud_dmebuckhorn_start.yaml

--- a/jenkins/edgecloud_crmdmuustmocloud1_start.yaml
+++ b/jenkins/edgecloud_crmdmuustmocloud1_start.yaml
@@ -18,6 +18,9 @@ spec:
       - name: crmtmocloud1
         image: registry.mobiledgex.net:5000/mobiledgex/edge-cloud:$AUTOMATION_DOCKERTAG
         imagePullPolicy: Always
+        resources:
+          requests:
+            cpu: 10m
         command:
          - crmserver
         args:
