add "--fakecloudlet" to crm yaml files  Changes to be committed: 	modified:   edgecloud_crmazurecloud1_start.yaml 	modified:   edgecloud_crmgcpcloud1_start.yaml 	modified:   edgecloud_crmdmuustmocloud1_start.yaml 	modified:   edgecloud_crmdmuustmocloud2_start.yaml

--- a/jenkins/edgecloud_crmazurecloud1_start.yaml
+++ b/jenkins/edgecloud_crmazurecloud1_start.yaml
@@ -32,6 +32,7 @@ spec:
          - "controller:37001"
          - "--tls"
          - "/root/tls/mex-server.crt"
+         - "--fakecloudlet"
          - "--d"
          - "api,notify,mexos"
       imagePullSecrets:
