change DME carrier to TDG for VerifyClient  Changes to be committed: 	modified:   edgecloud_dmebonn_start.yaml

--- a/jenkins/edgecloud_dmebonn_start.yaml
+++ b/jenkins/edgecloud_dmebonn_start.yaml
@@ -30,7 +30,7 @@ spec:
          - "--locverurl"
          - "http://mextest.locsim.mobiledgex.net:8888/verifyLocation"
          - "--carrier"
-         - "BONN1"
+         - "TDG"
          - "--d"
          - "locapi,dmedb,dmereq"
          - "--toksrvurl"
