update azure and buckhorn crm for new env variables  Changes to be committed: 	modified:   ../../../jenkins/edgecloud_crmazurecentral_start.yaml 	modified:   ../../../jenkins/edgecloud_crmbuckhorn_start.yaml

--- a/jenkins/edgecloud_crmazurecentral_start.yaml
+++ b/jenkins/edgecloud_crmazurecentral_start.yaml
@@ -26,6 +26,12 @@ spec:
         env:
          - name: PATH
            value: /tmp/google-cloud-sdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/root/bin
+         - name: MEXENV_URL
+           value: https://vault.mobiledgex.net/v1/secret/data/cloudlet/openstack/mexenv.json
+         - name: CLOUDLET_KIND
+           value: azure
+         - name: MEX_AZURE_LOCATION
+           value: centralus
         args:
          - "--apiAddr"
          - "0.0.0.0:65100"
