update azure and bonn crm for new env variables  Changes to be committed: 	modified:   ../../../jenkins/edgecloud_crmazurecentral_start.yaml 	modified:   ../../../jenkins/edgecloud_crmbonn_start.yaml

--- a/jenkins/edgecloud_crmbonn_start.yaml
+++ b/jenkins/edgecloud_crmbonn_start.yaml
@@ -27,6 +27,17 @@ spec:
             cpu: 10m
         command:
          - crmserver
+        env:
+         - name: CLOUDLET_KIND
+           value: openstack
+         - name: MEX_OS_IMAGE
+           value: mobiledgex
+         - name: MEX_EXT_NETWORK
+           value: external-network-shared
+         - name: OPENRC_URL
+           value: https://vault.mobiledgex.net/v1/secret/data/cloudlet/openstack/bonn/openrc.json
+         - name: MEXENV_URL
+           value: https://vault.mobiledgex.net/v1/secret/data/cloudlet/openstack/mexenv.json
         args:
          - "--apiAddr"
          - "0.0.0.0:50051"
