add notify log to dme  Changes to be committed: 	modified:   ../../../jenkins/edgecloud_dmebuckhorn_start.yaml

--- a/jenkins/edgecloud_dmebuckhorn_start.yaml
+++ b/jenkins/edgecloud_dmebuckhorn_start.yaml
@@ -32,7 +32,7 @@ spec:
          - "--carrier"
          - "GDDT"
          - "--d"
-         - "locapi,dmedb,dmereq"
+         - "locapi,dmedb,dmereq,notify"
          - "--toksrvurl"
          - "http://mextest.tok.mobiledgex.net:9999/its?followURL=https://dme.mobiledgex.net/verifyLoc" 
          - "--vaultAddr"
