--- a/testcases/csharp/verifyLocationMisMatchOtherCountry/verifyLocationMisMatchOtherCountry/verifyLocationMisMatchOtherCountry.csproj
+++ b/testcases/csharp/verifyLocationMisMatchOtherCountry/verifyLocationMisMatchOtherCountry/verifyLocationMisMatchOtherCountry.csproj
@@ -7,5 +7,6 @@
 
   <ItemGroup>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
+    <PackageReference Include="MobiledgeX.MatchingEngineGrpcLibrary" Version="1.3.1" />
   </ItemGroup>
 </Project>
