--- a/testcases/csharp/verifyLocation100KMRest/verifyLocation100KMRest/verifyLocation100KMRest.csproj
+++ b/testcases/csharp/verifyLocation100KMRest/verifyLocation100KMRest/verifyLocation100KMRest.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <PackOnBuild>true</PackOnBuild>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -13,6 +14,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
-    <PackageReference Include="MobiledgeX.MatchingEngineRestSDKLibrary" Version="1.3.5.4" />
+    <PackageReference Include="MobiledgeX.MatchingEngineRestSDKLibrary" Version="1.3.5.5" />
   </ItemGroup>
 </Project>
