update crm yaml files for vault token  Changes to be committed: 	modified:   edgecloud_crmazurecentral_start.yaml 	modified:   edgecloud_crmbonn_start.yaml 	modified:   edgecloud_crmhamburg_start.yaml

--- a/jenkins/edgecloud_crmazurecentral_start.yaml
+++ b/jenkins/edgecloud_crmazurecentral_start.yaml
@@ -32,6 +32,8 @@ spec:
            value: azure
          - name: MEX_AZURE_LOCATION
            value: centralus
+         - name: VAULT_TOKEN
+           value: 0eb94cce-ab3f-33a3-bd66-0046e8743a14
         args:
          - "--apiAddr"
          - "0.0.0.0:65100"
