--- a/jenkins/edgecloud_crmbuckhorn_start.yaml
+++ b/jenkins/edgecloud_crmbuckhorn_start.yaml
@@ -38,6 +38,8 @@ spec:
            value: https://vault.mobiledgex.net/v1/secret/data/cloudlet/openstack/buckhorn/openrc.json
          - name: MEXENV_URL
            value: https://vault.mobiledgex.net/v1/secret/data/cloudlet/openstack/mexenv.json
+         - name: VAULT_TOKEN
+           value: ***REMOVED***
         args:
          - "--apiAddr"
          - "0.0.0.0:50051"
