--- a/jenkins/edgecloud_crmhawkins_start.yaml
+++ b/jenkins/edgecloud_crmhawkins_start.yaml
@@ -34,6 +34,8 @@ spec:
            value: https://vault.mobiledgex.net/v1/secret/data/cloudlet/openstack/hawkins/openrc.json
          - name: MEXENV_URL
            value: https://vault.mobiledgex.net/v1/secret/data/cloudlet/openstack/mexenv.json
+         - name: VAULT_TOKEN
+           value: ***REMOVED***
         args:
          - "--apiAddr"
          - "0.0.0.0:50054"
