update jenkins yaml for fakecloudlet  Changes to be committed: 	modified:   edgecloud_crmdmuustmocloud10_start.yaml modified:   edgecloud_crmdmuustmocloud1_start.yaml 	modified:   edgecloud_crmdmuustmocloud2_start.yaml 	modified:   edgecloud_crmdmuustmocloud3_start.yaml 	modified:   edgecloud_crmdmuustmocloud4_start.yaml 	modified:   edgecloud_crmdmuustmocloud5_start.yaml 	modified:   edgecloud_crmdmuustmocloud6_start.yaml 	modified:   edgecloud_crmdmuustmocloud7_start.yaml 	modified:   edgecloud_crmdmuustmocloud8_start.yaml 	modified:   edgecloud_crmdmuustmocloud9_start.yaml

--- a/jenkins/edgecloud_crmdmuustmocloud10_start.yaml
+++ b/jenkins/edgecloud_crmdmuustmocloud10_start.yaml
@@ -32,7 +32,8 @@ spec:
          - "controller:37001"
          - "--tls"
          - "/root/tls/mex-server.crt"
-         - "--fakecloudlet"
+         - "--platform"
+         - "fakecloudlet"
          - "--d"
          - "api,notify,mexos"
       imagePullSecrets:
