update crm yaml for platform  Changes to be committed: 	modified:   edgecloud_crmattattcloud1_start.yaml 	modified:   edgecloud_crmazurecentral_start.yaml 	modified:   edgecloud_crmazurecloud1_start.yaml 	modified:   edgecloud_crmbonn_start.yaml 	modified:   edgecloud_crmgcpcloud1_start.yaml 	modified:   edgecloud_crmhamburg_start.yaml

--- a/jenkins/edgecloud_crmazurecentral_start.yaml
+++ b/jenkins/edgecloud_crmazurecentral_start.yaml
@@ -41,6 +41,8 @@ spec:
          - "{\"operator_key\":{\"name\":\"azure\"},\"name\":\"automationAzureCentralCloudlet\"}"
          - "--notifyAddrs"
          - "controller:37001"
+         - "--platform"
+         - "azure"
          - "--tls"
          - "/root/tls/mex-server.crt"
          - "--d"
