--- a/jenkins/edgecloud_crmhamburg_start.yaml
+++ b/jenkins/edgecloud_crmhamburg_start.yaml
@@ -43,6 +43,8 @@ spec:
          - "{\"operator_key\":{\"name\":\"TDG\"},\"name\":\"automationHamburgCloudlet\"}"
          - "--notifyAddrs"
          - "controller:37001"
+         - "--platform"
+         - "openstack"
          - "--tls"
          - "/root/tls/mex-server.crt"
          - "--d"
