update crm yaml for platform  Changes to be committed: 	modified:   edgecloud_crmattattcloud1_start.yaml 	modified:   edgecloud_crmazurecentral_start.yaml 	modified:   edgecloud_crmazurecloud1_start.yaml 	modified:   edgecloud_crmbuckhorn_start.yaml 	modified:   edgecloud_crmgcpcloud1_start.yaml 	modified:   edgecloud_crmhawkins_start.yaml

--- a/jenkins/edgecloud_crmhawkins_start.yaml
+++ b/jenkins/edgecloud_crmhawkins_start.yaml
@@ -43,6 +43,8 @@ spec:
          - "{\"operator_key\":{\"name\":\"GDDT\"},\"name\":\"automationHawkinsCloudlet\"}"
          - "--notifyAddrs"
          - "controller:37001"
+         - "--platform"
+         - "openstack"
          - "--tls"
          - "/root/tls/mex-server.crt"
          - "--d"
