add mc to jenkins  Changes to be committed: 	new file:   ../../../jenkins/edgecloud_mc_start.yaml 	new file:   ../../../jenkins/postgres-configmap_mcuser.yaml 	modified:   ../../../jenkins/postgres-deployment.yaml 	modified:   ../../../jenkins/run_edgecloud.jenkinsfile

--- a/jenkins/postgres-deployment.yaml
+++ b/jenkins/postgres-deployment.yaml
@@ -17,7 +17,7 @@ spec:
             - containerPort: 5432
           envFrom:
             - configMapRef:
-                name: postgres-config
+                name: postgres-config-mcdb
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: postgredb
