--- a/jenkins/edgecloud_crmgcpcentral_start.yaml
+++ b/jenkins/edgecloud_crmgcpcentral_start.yaml
@@ -32,7 +32,9 @@ spec:
            value: still-entity-201400
          - name: MEX_GCP_ZONE
            value: us-central1-c
-         - name: VAULT_TOKEN
+         - name: VAULT_ROLE_ID
+           value: e017fc39-dff7-adc3-364f-bb8e04805454
+         - name: VAULT_SECRET_ID
            value: ***REMOVED***
         args:
          - "--apiAddr"
