--- a/jenkins/edgecloud_crmazurecentral_start.yaml
+++ b/jenkins/edgecloud_crmazurecentral_start.yaml
@@ -32,8 +32,10 @@ spec:
            value: azure
          - name: MEX_AZURE_LOCATION
            value: centralus
-         - name: VAULT_TOKEN
-           value: 0eb94cce-ab3f-33a3-bd66-0046e8743a14
+         - name: VAULT_ROLE_ID
+           value: e017fc39-dff7-adc3-364f-bb8e04805454
+         - name: VAULT_SECRET_ID
+           value: 6e88cd75-7297-ba5e-6b27-9d612e3792b7
         args:
          - "--apiAddr"
          - "0.0.0.0:65100"
