--- a/testcases/csharp/findCloudletNoSessionCookieRest/findCloudletNoSessionCookieRest/findCloudletNoSessionCookieRest.csproj
+++ b/testcases/csharp/findCloudletNoSessionCookieRest/findCloudletNoSessionCookieRest/findCloudletNoSessionCookieRest.csproj
@@ -14,6 +14,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
-    <PackageReference Include="MobiledgeX.MatchingEngineRestSDKLibrary" Version="1.3.8*" />
+    <PackageReference Include="MobiledgeX.MatchingEngineRestSDKLibrary" Version="1.3.8.1" />
   </ItemGroup>
 </Project>
