--- a/jenkins/edgecloud_controller_start.yaml
+++ b/jenkins/edgecloud_controller_start.yaml
@@ -38,6 +38,7 @@ spec:
           - "35.247.126.154:8086"
           - "-d"
           - "etcd,api,notify"
+	  - "-autoUpgrade"
        imagePullSecrets:
         - name: mexreg-secret
 
