--- a/jenkins/edgecloud_crmhawkins_start.yaml
+++ b/jenkins/edgecloud_crmhawkins_start.yaml
@@ -32,7 +32,9 @@ spec:
            value: https://vault.mobiledgex.net/v1/secret/data/cloudlet/openstack/hawkins/openrc.json
          - name: MEXENV_URL
            value: https://vault.mobiledgex.net/v1/secret/data/cloudlet/openstack/mexenv.json
-         - name: VAULT_TOKEN
+         - name: VAULT_ROLE_ID
+           value: e017fc39-dff7-adc3-364f-bb8e04805454
+         - name: VAULT_SECRET_ID
            value: ***REMOVED***
         args:
          - "--apiAddr"
