Changed loadbuild path in make files and fixed private_path in findcloudlet test cases  Changes to be committed: 	modified:   testcases/cpp/findCloudletFail/Makefile 	modified:   testcases/cpp/findCloudletFail/findCloudletFail.cpp 	modified:   testcases/cpp/findCloudletNoCarrier/Makefile 	modified:   testcases/cpp/findCloudletNoCarrier/findCloudletNoCarrier.cpp 	modified:   testcases/cpp/findCloudletNoLocation/Makefile 	modified:   testcases/cpp/findCloudletNoLocation/findCloudletNoLocation.cpp 	modified:   testcases/cpp/findCloudletNoSessionCookie/Makefile 	modified:   testcases/cpp/findCloudletNoSessionCookie/findCloudletNoSessionCookie.cpp 	modified:   testcases/cpp/findCloudletSuccess/Makefile 	modified:   testcases/cpp/findCloudletSuccess/findCloudletSuccess.cpp 	modified:   testcases/cpp/registerClient/Makefile 	modified:   testcases/cpp/registerClientWithAuth/Makefile 	modified:   testcases/cpp/registerClientWithAuthWrongApp/Makefile 	modified:   testcases/cpp/registerClientWithAuthWrongAppVer/Makefile 	modified:   testcases/cpp/registerClientWithAuthWrongDev/Makefile 	modified:   testcases/cpp/registerClientWrongApp/Makefile 	modified:   testcases/cpp/registerClientWrongAppVersion/Makefile 	modified:   testcases/cpp/registerClientWrongDevName/Makefile 	modified:   testcases/cpp/verifyLocation/Makefile 	modified:   testcases/cpp/verifyLocation100KM/Makefile 	modified:   testcases/cpp/verifyLocation10KM/Makefile 	modified:   testcases/cpp/verifyLocationBadCarrier/Makefile 	modified:   testcases/cpp/verifyLocationBadCookie/Makefile 	modified:   testcases/cpp/verifyLocationBadToken/Makefile 	modified:   testcases/cpp/verifyLocationMisMatchOtherCountry/Makefile 	modified:   testcases/cpp/verifyLocationMisMatchSameCountry/Makefile 	modified:   testcases/cpp/verifyLocationRoamingCountryMatch/Makefile 	modified:   testcases/cpp/verifyLocationRoamingCountryMisMatch/Makefile

--- a/testcases/cpp/findCloudletFail/Makefile
+++ b/testcases/cpp/findCloudletFail/Makefile
@@ -43,7 +43,7 @@ GRPC_CPP_PLUGIN_PATH ?= `which $(GRPC_CPP_PLUGIN)`
 
 # Run "brew install coreutils" to get "grealpath" for protoc's requirement of absolute paths
 #ABSOLUTEPATH := $(shell grealpath ../../../../edge-cloud/)
-ABSOLUTEPATH := $(shell realpath ../../../../../../../../buildEdgecloud/go/src/github.com/mobiledgex/edge-cloud/)
+ABSOLUTEPATH := $(shell realpath ~/workspace/runEdgecloud/go/src/github.com/mobiledgex/edge-cloud/)
 PROTOS_PATH = $(ABSOLUTEPATH)/d-match-engine/dme-proto
 THIRD_PARTY_PROTOS_PATH = $(ABSOLUTEPATH)/edge-mvp/third_party
 
