--- a/testcases/cpp/findCloudletNoLocation/Makefile
+++ b/testcases/cpp/findCloudletNoLocation/Makefile
@@ -43,7 +43,7 @@ GRPC_CPP_PLUGIN_PATH ?= `which $(GRPC_CPP_PLUGIN)`
 
 # Run "brew install coreutils" to get "grealpath" for protoc's requirement of absolute paths
 #ABSOLUTEPATH := $(shell grealpath ../../../../edge-cloud/)
-ABSOLUTEPATH := $(shell realpath ../../../../../../../../buildEdgecloud/go/src/github.com/mobiledgex/edge-cloud/)
+ABSOLUTEPATH := $(shell realpath ~/workspace/runEdgecloud/go/src/github.com/mobiledgex/edge-cloud/)
 PROTOS_PATH = $(ABSOLUTEPATH)/d-match-engine/dme-proto
 THIRD_PARTY_PROTOS_PATH = $(ABSOLUTEPATH)/edge-mvp/third_party
 
