fix testcases and update mc jenkins file  Changes to be committed: 	modified:   ../../../jenkins/edgecloud_mc_start.yaml 	modified:   ../../controller/cloudlet/deleteCloudlet.robot 	modified:   ../../controller/cluster/test_clusterAdd_100.py 	modified:   ../../controller/cluster/test_clusterAdd_defaultFlavor.py 	modified:   ../../controller/cluster/test_clusterAdd_noName.py 	modified:   ../../../tools/create_prov.robot

--- a/jenkins/edgecloud_mc_start.yaml
+++ b/jenkins/edgecloud_mc_start.yaml
@@ -14,6 +14,10 @@ spec:
       labels:
         app: mc
     spec:
+       hostAliases:
+        - ip: "35.202.131.16"
+          hostnames:
+          - "automation.ctrl.mobiledgex.net"
        containers:
        - name: mc
          image: registry.mobiledgex.net:5000/mobiledgex/edge-cloud:$AUTOMATION_DOCKERTAG
@@ -35,7 +39,7 @@ spec:
           - "--tlskey"
           - "/root/tls/mex-server.key"
           - "--clientCert"
-          - "/root/tls/mex-client.crt"
+          - "/root/tls/mex-server.crt"
           - "-d"
           - "etcd,api,notify"
          env:
