updated jenkins for EU controller  Changes to be committed: 	new file:   edgecloud_controller_eu_start.yaml 	modified:   edgecloud_mc_start.yaml 	new file:   etcd_eu_start.yaml 	modified:   run_edgecloud.jenkinsfile

--- a/jenkins/edgecloud_mc_start.yaml
+++ b/jenkins/edgecloud_mc_start.yaml
@@ -18,6 +18,9 @@ spec:
         - ip: "35.202.131.16"
           hostnames:
           - "automation.ctrl.mobiledgex.net"
+        - ip: "35.238.36.211"
+          hostnames:
+          - "automationeu.ctrl.mobiledgex.net"
        containers:
        - name: mc
          image: registry.mobiledgex.net:5000/mobiledgex/edge-cloud:$AUTOMATION_DOCKERTAG
