updated dme yaml for new TLS options  Changes to be committed: 	modified:   ../../../jenkins/edgecloud_dmebuckhorn_start.yaml

--- a/jenkins/edgecloud_dmebuckhorn_start.yaml
+++ b/jenkins/edgecloud_dmebuckhorn_start.yaml
@@ -41,6 +41,10 @@ spec:
          - "https://vault.mobiledgex.net"
          - "--tls"
          - "/root/tls/mex-server.crt"
+         - "--tlsApiCertFile"
+         - "/root/tls/mex-server.crt"
+         - "--tlsApiKeyFile"
+         - "/root/tls/mex-server.key"
          - "--cloudletKey"
          - "{\"operator_key\":{\"name\":\"GDDT\"},\"name\":\"automationBuckhornCloudlet\"}"
         env:
