update crm for vault parms  Changes to be committed: 	modified:   ../../jenkins/edgecloud_crmazurecentral_start.yaml 	modified:   ../../jenkins/edgecloud_crmbuckhorn_start.yaml 	modified:   ../../jenkins/edgecloud_crmgcpcentral_start.yaml 	modified:   ../../jenkins/edgecloud_crmhawkins_start.yaml 	modified:   ../controller/cluster/test_clusterInstAdd_clusterNotFound.py 	modified:   ../controller/cluster/test_clusterInstDelete.py

--- a/jenkins/edgecloud_crmhawkins_start.yaml
+++ b/jenkins/edgecloud_crmhawkins_start.yaml
@@ -28,16 +28,14 @@ spec:
            value: openstack
          - name: MEX_EXT_NETWORK
            value: external-network-shared
-         - name: OPENRC_URL
-           value: https://vault.mobiledgex.net/v1/secret/data/cloudlet/openstack/hawkins/openrc.json
          - name: MEXENV_URL
            value: https://vault.mobiledgex.net/v1/secret/data/cloudlet/openstack/mexenv.json
          - name: VAULT_ROLE_ID
            value: e017fc39-dff7-adc3-364f-bb8e04805454
          - name: VAULT_SECRET_ID
            value: ***REMOVED***
-         - name: CLEANUP_ON_FAILURE
-           value: "no"
+         #- name: CLEANUP_ON_FAILURE
+         #  value: "no"
         args:
          - "--apiAddr"
          - "0.0.0.0:50054"
@@ -49,6 +47,10 @@ spec:
          - "openstack"
          - "--tls"
          - "/root/tls/mex-server.crt"
+         - "--vaultAddr"
+         - "vault.mobiledgex.net"
+         - "--physicalName"
+         - "hawkins"
          - "--d"
          - "api,notify,mexos"
       imagePullSecrets:
