update dme for new region parm  Changes to be committed: 	modified:   ../../../jenkins/edgecloud_dmebonn_start.yaml

--- a/jenkins/edgecloud_dmebonn_start.yaml
+++ b/jenkins/edgecloud_dmebonn_start.yaml
@@ -39,6 +39,8 @@ spec:
          - "http://mextest.tok.mobiledgex.net:9999/its?followURL=https://dme.mobiledgex.net/verifyLoc" 
          - "--vaultAddr"
          - "https://vault.mobiledgex.net"
+         - "--region"
+         - ""
          - "--tls"
          - "/root/tls/mex-server.crt"
          - "--tlsApiCertFile"
