update controller eu  Changes to be committed: 	modified:   edgecloud_controller_eu_start.yaml 	modified:   run_edgecloud.jenkinsfile

--- a/jenkins/edgecloud_controller_eu_start.yaml
+++ b/jenkins/edgecloud_controller_eu_start.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
        containers:
        - name: controllereu
-         image: registry.mobiledgex.net:5000/mobiledgex/edge-cloud:2019-05-31
+         image: registry.mobiledgex.net:5000/mobiledgex/edge-cloud:$AUTOMATION_DOCKERTAG
          imagePullPolicy: Always
          resources:
            requests:
