Updated testcases for code changes  Changes to be committed: 	modified:   cpp/findCloudletFail/Makefile 	modified:   cpp/findCloudletFail/findCloudletFail.cpp 	modified:   cpp/findCloudletNoCarrier/Makefile 	modified:   cpp/findCloudletNoCarrier/findCloudletNoCarrier.cpp 	modified:   cpp/findCloudletNoLocation/Makefile 	modified:   cpp/findCloudletNoLocation/findCloudletNoLocation.cpp 	modified:   cpp/findCloudletNoSessionCookie/Makefile 	modified:   cpp/findCloudletNoSessionCookie/findCloudletNoSessionCookie.cpp 	modified:   cpp/findCloudletSuccess/Makefile 	modified:   cpp/findCloudletSuccess/findCloudletSuccess.cpp 	modified:   cpp/registerClient/Makefile 	modified:   cpp/registerClient/registerClient.cpp 	modified:   cpp/registerClientWithAuth/Makefile 	modified:   cpp/registerClientWithAuth/registerClientWithAuth.cpp 	modified:   cpp/registerClientWithAuthWrongApp/Makefile 	modified:   cpp/registerClientWithAuthWrongApp/registerClientWithAuthWrongApp.cpp 	modified:   cpp/registerClientWithAuthWrongAppVer/Makefile 	modified:   cpp/registerClientWithAuthWrongAppVer/registerClientWithAuthWrongAppVer.cpp 	modified:   cpp/registerClientWithAuthWrongDev/Makefile 	modified:   cpp/registerClientWithAuthWrongDev/registerClientWithAuthWrongDev.cpp

--- a/testcases/cpp/registerClientWithAuthWrongApp/Makefile
+++ b/testcases/cpp/registerClientWithAuthWrongApp/Makefile
@@ -23,6 +23,7 @@ CPPFLAGS += -I.
 CPPFLAGS += -I../common
 CPPFLAGS += -I../jwt-cpp
 CPPFLAGS += -I/usr/local/Cellar/openssl/1.0.2q/include/
+CPPFLAGS += -I/usr/local/Cellar/openssl/1.0.2r/include/  
 CPPFLAGS += -I/usr/include/
 CXXFLAGS += -std=c++11
 CXXFLAGS += -fPIC
