add ldap to mc and update bonn cert  Changes to be committed: 	modified:   edgecloud_mc_start.yaml 	modified:   ../testcases/config/openrc_bonn.mex

--- a/jenkins/edgecloud_mc_start.yaml
+++ b/jenkins/edgecloud_mc_start.yaml
@@ -37,6 +37,8 @@ spec:
           - "0.0.0.0:9900"
           - "--vaultAddr"
           - "https://vault.mobiledgex.net"
+          - "-ldapAddr"
+          - "0.0.0.0:9389"
           - "--tls"
           - "/root/tls/mex-server.crt"
           - "--tlskey"
