add region arg to controller  Changes to be committed: 	modified:   ../../../jenkins/edgecloud_controller_eu_start.yaml 	modified:   ../../../jenkins/edgecloud_controller_start.yaml

--- a/jenkins/edgecloud_controller_eu_start.yaml
+++ b/jenkins/edgecloud_controller_eu_start.yaml
@@ -32,6 +32,8 @@ spec:
           - "0.0.0.0:55002"
           - "--httpAddr"
           - "0.0.0.0:36002"
+          - "--region"
+          - "EU"
           - "--vaultAddr"
           - "https://vault.mobiledgex.net"
           - "--tls"
