--- a/jenkins/edgecloud_controller_start.yaml
+++ b/jenkins/edgecloud_controller_start.yaml
@@ -36,6 +36,8 @@ spec:
           - "US"
           - "--vaultAddr"
           - "https://vault.mobiledgex.net"
+          - "--versionTag"
+          - "$AUTOMATION_DOCKERTAG"
           - "--tls"
           - "/root/tls/mex-server.crt"
           - "--influxAddr"
