--- a/jenkins/edgecloud_crmattattcloud1_start.yaml
+++ b/jenkins/edgecloud_crmattattcloud1_start.yaml
@@ -24,8 +24,6 @@ spec:
         command:
          - crmserver
         args:
-         - "--apiAddr"
-         - "0.0.0.0:50101"
          - "--cloudletKey"
          - "{\"operator_key\":{\"name\":\"att\"},\"name\":\"attcloud-1\"}"
          - "--notifyAddrs"
@@ -33,7 +31,7 @@ spec:
          - "--tls"
          - "/root/tls/mex-server.crt"
          - "--platform"
-         - "fakecloudlet"
+         - "PLATFORM_TYPE_FAKE"
          - "--d"
          - "api,notify,mexos"
       imagePullSecrets:
