update crm/controller startup. add vm command testcase  Changes to be committed: 	modified:   edgecloud_controller_eu_start.yaml 	modified:   edgecloud_controller_start.yaml 	modified:   edgecloud_crmattattcloud1_start.yaml 	modified:   edgecloud_crmazurecentral_start.yaml 	modified:   edgecloud_crmazurecloud1_start.yaml 	modified:   edgecloud_crmbuckhorn_start.yaml 	modified:   edgecloud_crmgcpcentral_start.yaml 	modified:   edgecloud_crmgcpcloud1_start.yaml 	modified:   edgecloud_crmhawkins_start.yaml 	modified:   edgecloud_crmdmuustmocloud10_start.yaml 	modified:   edgecloud_crmdmuustmocloud1_start.yaml 	modified:   edgecloud_crmdmuustmocloud2_start.yaml 	modified:   edgecloud_crmdmuustmocloud3_start.yaml 	modified:   edgecloud_crmdmuustmocloud4_start.yaml 	modified:   edgecloud_crmdmuustmocloud5_start.yaml 	modified:   edgecloud_crmdmuustmocloud6_start.yaml 	modified:   edgecloud_crmdmuustmocloud7_start.yaml 	modified:   edgecloud_crmdmuustmocloud8_start.yaml 	modified:   edgecloud_crmdmuustmocloud9_start.yaml 	modified:   ../testcases/crm/app/fqdn_udptcp_port_openstack_vm.robot

--- a/jenkins/edgecloud_crmbuckhorn_start.yaml
+++ b/jenkins/edgecloud_crmbuckhorn_start.yaml
@@ -39,14 +39,12 @@ spec:
          - name: VAULT_SECRET_ID
            value: ***REMOVED***
         args:
-         - "--apiAddr"
-         - "0.0.0.0:50051"
          - "--cloudletKey"
          - "{\"operator_key\":{\"name\":\"GDDT\"},\"name\":\"automationBuckhornCloudlet\"}"
          - "--notifyAddrs"
          - "controller:37001"
          - "--platform"
-         - "openstack"
+         - "PLATFORM_TYPE_OPENSTACK"
          - "--tls"
          - "/root/tls/mex-server.crt"
          - "--vaultAddr"
